CocoNuestro/src/compilationunit/Parser.java
package compilationunit;

import java.util.Vector;
import java.util.HashMap;
import java.util.Iterator;
import java.util.Set;
import java.util.Queue;

// Set the name of your grammar here (and at the end of this grammar):


public class Parser {
	public static final int _EOF = 0;
	public static final int _ident = 1;
	public static final int _enteros = 2;
	public static final int _cadenaCar = 3;
	public static final int _bool = 4;
	public static final int _boool = 5;
	public static final int _charr = 6;
	public static final int _classs = 7;
	public static final int _false = 8;
	public static final int _intt = 9;
	public static final int _new = 10;
	public static final int _short = 11;
	public static final int _static = 12;
	public static final int _true = 13;
	public static final int _voidd = 14;
	public static final int _publicc = 15;
	public static final int _privatte = 16;
	public static final int _dospuntos_dos = 17;
	public static final int _rreturn = 18;
	public static final int _cout = 19;
	public static final int _cin = 20;
	public static final int _menor_menor = 21;
	public static final int _mayor_mayor = 22;
	public static final int _iff = 23;
	public static final int _elsse = 24;
	public static final int _main = 25;
	public static final int _dosPuntos = 26;
	public static final int _comma = 27;
	public static final int _punto = 28;
	public static final int _llave_ab = 29;
	public static final int _corchete_ab = 30;
	public static final int _parent_ab = 31;
	public static final int _op_menos = 32;
	public static final int _op_menosmenos = 33;
	public static final int _op_mas = 34;
	public static final int _op_masmas = 35;
	public static final int _llave_ce = 36;
	public static final int _corchete_ce = 37;
	public static final int _parent_ce = 38;
	public static final int _op_producto = 39;
	public static final int _op_division = 40;
	public static final int _op_asig = 41;
	public static final int _puntoComa = 42;
	public static final int _doblesComillas = 43;
	public static final int _interrogacion = 44;
	public static final int _barra_vert = 45;
	public static final int _op_negacion = 46;
	public static final int _op_menor = 47;
	public static final int _op_mayor = 48;
	public static final int _op_menor_igual = 49;
	public static final int _op_mayor_igual = 50;
	public static final int _op_igual = 51;
	public static final int _op_distinto = 52;
	public static final int _op_and = 53;
	public static final int _op_or = 54;
	public static final int _op_asig_mas = 55;
	public static final int _op_asig_menos = 56;
	public static final int _op_asig_producto = 57;
	public static final int _op_asig_division = 58;
	public static final int _op_asig_modulo = 59;
	public static final int maxT = 60;

	static final boolean T = true;
	static final boolean x = false;
	static final int minErrDist = 2;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;
	
	public Scanner scanner;
	public Errors errors;

	final int undef=0, entera=1, bool=2, cadena=3;
	// DeclaraciÃ³n de constantes de tipo de scopes
	final int var=0, funcion=1, clase=2, metodo=3, parametro=4;

	// Tabla de simbolos global
	public Tablas tabla;
	// Tupla devuelta por las expresiones (tipo, valor)

// If you want your generated compiler case insensitive add the
// keyword IGNORECASE here.




	public Parser(Scanner scanner) {
		this.scanner = scanner;
		errors = new Errors();
	}

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	public void SemErr (String msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) {
				++errDist;
				break;
			}

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	boolean StartOf (int s) {
		return set[s][la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}
	
	boolean WeakSeparator (int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) { Get(); return true; }
		else if (StartOf(repFol)) return false;
		else {
			SynErr(n);
			while (!(set[syFol][kind] || set[repFol][kind] || set[0][kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}
	
	void CEMASMAS1() {
		tabla = new Tablas();	
		CEMASMAS();
	}

	void CEMASMAS() {
		int type=undef; 
		int type1;
		
		if (la.kind == 7 || la.kind == 15 || la.kind == 16) {
			DecClase();
			CEMASMAS();
		} else if (StartOf(1)) {
			if (StartOf(2)) {
				type = Ttipo();
			} else {
				Get();
			}
			if (la.kind == 25) {
				Main();
			} else if (la.kind == 1) {
				Get();
				Simbolo simbolo = new Simbolo(t.val, type, 0);
				simbolo.SetLine(t.line);
				simbolo.SetColumn(t.col);
				
				if (tabla.EstaEnActual(simbolo.GetNombre()))
						{
						System.out.println("ohhh");
						Simbolo simbolonuevo = tabla.GetSimboloRecur(t.val);
						SemErr(simbolonuevo.GetNombre() + " ya estaba declarado en la linea " + simbolonuevo.GetLine() + " columna " + simbolonuevo.GetColumn());
						}
					else
					   {
					   System.out.println(t.val + " mierda");
				 tabla.InsertarEnActual(simbolo);
				 }
				
				if (la.kind == 31) {
					Subprograma(simbolo);
				} else if (la.kind == 30) {
					Vector(simbolo);
				} else if (la.kind == 41 || la.kind == 42) {
					type1 = DecVar(simbolo);
					if (type1==type) {
					//System.out.println("tipos ok!"+type+" "+type1);
					}
					else if (type1==undef) {
						//System.out.println("tipos ok!__No has inicializado la var, pero ok!");
					} 
					else {
						SemErr("Tipos: Error: arg1="+type+",arg2=" + type1);
					}
					//System.out.println("El valor del simbolo es:"+simbolo.GetValor()); 
					
				} else if (la.kind == 17) {
					DecMetodo();
				} else SynErr(61);
				CEMASMAS();
			} else SynErr(62);
		} else SynErr(63);
	}

	void DecClase() {
		int type; 
		if (la.kind == 15 || la.kind == 16) {
			if (la.kind == 15) {
				Get();
			} else {
				Get();
			}
		}
		Expect(7);
		Expect(1);
		Expect(29);
		Cuerpo_Clase();
		if (la.kind == 15 || la.kind == 16) {
			if (la.kind == 15) {
				Get();
				Expect(26);
				Cuerpo_Clase();
				if (la.kind == 16) {
					Get();
					Expect(26);
					Cuerpo_Clase();
				}
			} else {
				Get();
				Expect(26);
				Cuerpo_Clase();
				if (la.kind == 15) {
					Get();
					Expect(26);
					Cuerpo_Clase();
				}
			}
		}
		Expect(36);
		Expect(42);
	}

	int  Ttipo() {
		int  type;
		type = undef; //inicializamos
		
		if (la.kind == 9) {
			Get();
			type = entera;	
		} else if (la.kind == 4) {
			Get();
			type = bool; 	
		} else if (la.kind == 5) {
			Get();
			type = bool; 	
		} else if (la.kind == 6) {
			Get();
			if (la.kind == 39) {
				Get();
			}
			type = cadena; 
		} else SynErr(64);
		return type;
	}

	void Main() {
		Simbolo simbolo = new Simbolo("main",0,funcion);
		Expect(25);
		Expect(31);
		if (StartOf(1)) {
			Parametros(simbolo);
		}
		Expect(38);
		Expect(29);
		Cuerpo();
		Expect(36);
	}

	void Subprograma(Simbolo simbolo) {
		tabla.NuevoAmbito();
		simbolo.SetKind (funcion);  
		Expect(31);
		if (StartOf(1)) {
			Parametros(simbolo);
		}
		Expect(38);
		Expect(29);
		Cuerpo();
		Expect(36);
	}

	void Vector(Simbolo simbolo) {
		simbolo.SetToVector();
		Simbolo sim = new Simbolo ("Temp", 0,0);
		int type;
		Expect(30);
		if (la.kind == 2 || la.kind == 32 || la.kind == 33) {
			type = ExpAritmetica(sim);
			((Number)sim.GetValor()).intValue();
			System.out.println("El tamano del vector es " + (Number)sim.GetValor());
		}
		Expect(37);
	}

	int  DecVar(Simbolo simbolo) {
		int  type;
		int type1=undef;
		System.out.println("Estas en DecVar");
		
		if (la.kind == 41) {
			Get();
			type1 = ExpAritmetica(simbolo);
			System.out.println("Variable inicializada a " + simbolo.GetValor()); 
		}
		Expect(42);
		type=type1; 
		return type;
	}

	void DecMetodo() {
		Simbolo sim = new Simbolo("no def", 0, 0);
		Expect(17);
		Expect(1);
		Expect(31);
		if (StartOf(1)) {
			Parametros(sim);
		}
		Expect(38);
		Expect(29);
		Cuerpo();
		Expect(36);
	}

	void Cuerpo_Clase() {
		int type;
		Simbolo sim = new Simbolo(t.val, 0, 0);
		if (StartOf(1)) {
			while (StartOf(1)) {
				if (StartOf(2)) {
					type = Ttipo();
					Expect(1);
					if (la.kind == 41 || la.kind == 42) {
						type = DecVar(sim);
					} else if (la.kind == 31) {
						DecCabMet();
					} else SynErr(65);
				} else {
					Get();
					Expect(1);
					DecCabMet();
				}
			}
		}
	}

	void DecCabMet() {
		int type; 
		Expect(31);
		Param_Cab();
		Expect(38);
		Expect(42);
	}

	void Param_Cab() {
		int type;
		Simbolo sim = new Simbolo("Temo",0,0); 
		if (StartOf(1)) {
			if (StartOf(2)) {
				type = Ttipo();
				if (la.kind == 30) {
					Vector(sim);
				}
				if (la.kind == 27) {
					while (la.kind == 27) {
						Get();
						type = Ttipo();
						if (la.kind == 30) {
							Vector(sim);
						}
					}
				}
			} else {
				Get();
			}
		}
	}

	void Parametros(Simbolo simbolo_nombre_funcion) {
		int type; 
		if (StartOf(2)) {
			type = Ttipo();
			Expect(1);
			Simbolo simbolo_parametro = new Simbolo(t.val, type, parametro);
			simbolo_nombre_funcion.AnadirParametro(simbolo_parametro);
			tabla.InsertarEnActual(simbolo_parametro); 
			if (la.kind == 30) {
				Vector(simbolo_parametro);
			}
			if (la.kind == 27) {
				while (la.kind == 27) {
					Get();
					type = Ttipo();
					Expect(1);
					simbolo_parametro = new Simbolo(t.val, type, parametro);
					simbolo_nombre_funcion.AnadirParametro(simbolo_parametro);
					tabla.InsertarEnActual(simbolo_parametro);
					if (la.kind == 30) {
						Vector(simbolo_parametro);
					}
				}
			}
		} else if (la.kind == 14) {
			Get();
		} else SynErr(66);
	}

	void Cuerpo() {
		int type = undef;
		// borrar cuando sigas
		
		while (StartOf(3)) {
			if (StartOf(4)) {
				Instruccion();
			} else {
				if (StartOf(2)) {
					type = Ttipo();
				} else {
					Get();
				}
				Expect(1);
				Simbolo sim = new Simbolo(t.val, type, 0);
				if (la.kind == 31) {
					Subprograma(sim);
				} else if (la.kind == 30 || la.kind == 41 || la.kind == 42) {
					if (la.kind == 30) {
						Vector(sim);
					} else {
						type = DecVar(sim);
					}
				} else SynErr(67);
			}
		}
	}

	void Instruccion() {
		int type; 
		if (la.kind == 18) {
			type  = InstReturn();
		} else if (la.kind == 19) {
			InstCout();
		} else if (la.kind == 20) {
			InstCin();
		} else if (la.kind == 1) {
			InstExpresion();
		} else if (la.kind == 23) {
			InstIfElse();
		} else SynErr(68);
	}

	int  ExpAritmetica(Simbolo sim) {
		int  tipoDev;
		tipoDev=undef;
		int valor, valor1, valor2;
		System.out.println("Estas en ExpArirmetica!");
		
		valor = ExpProducto();
		sim.SetValor(valor); 
		if (la.kind == 32 || la.kind == 34) {
			while (la.kind == 32 || la.kind == 34) {
				if (la.kind == 34) {
					Get();
					valor1 = ExpProducto();
					sim.SetValor(((Number) sim.GetValor()).intValue() + valor1); 
				} else if (StartOf(5)) {
				} else {
					Get();
					valor2 = ExpProducto();
					sim.SetValor(((Number) sim.GetValor()).intValue() - valor2); 
				}
			}
		}
		return tipoDev;
	}

	void LlamMet() {
		Expect(1);
		Expect(28);
		Expect(1);
		while (la.kind == 31) {
			if (la.kind == 31) {
				Get();
				Expect(38);
			} else {
				Get();
				while (StartOf(6)) {
					Argumentos();
				}
				Expect(38);
			}
		}
	}

	void Argumentos() {
		int type=undef; 
		if (StartOf(7)) {
			type = Expresion();
			while (la.kind == 27) {
				Get();
				Argumentos();
			}
		}
	}

	int  InstReturn() {
		int  tipoDev;
		tipoDev = undef;
		int type; 
		Expect(18);
		if (StartOf(7)) {
			type = Expresion();
			tipoDev= type; 
		}
		Expect(42);
		return tipoDev;
	}

	void InstCout() {
		int type=undef; 
		Expect(19);
		while (la.kind == 21) {
			Get();
			type = Arg_io();
		}
		Expect(42);
		if (type==undef) {
		SemErr("InstCout: Error tipos.");
		}
	}

	void InstCin() {
		int type; 
		Expect(20);
		Expect(22);
		type = Arg_io();
		Expect(42);
	}

	void InstExpresion() {
		int type=undef; 
		Expect(1);
		if (la.kind == 28) {
			Get();
			Expect(1);
		}
		if (la.kind == 31) {
			Get();
			Argumentos();
			Expect(38);
			Expect(42);
		} else if (StartOf(8)) {
			switch (la.kind) {
			case 41: {
				Get();
				break;
			}
			case 55: {
				Get();
				break;
			}
			case 56: {
				Get();
				break;
			}
			case 57: {
				Get();
				break;
			}
			case 58: {
				Get();
				break;
			}
			case 59: {
				Get();
				break;
			}
			}
			type = Expresion();
			Expect(42);
		} else SynErr(69);
	}

	void InstIfElse() {
		int type, type1;
		Simbolo sim = new Simbolo(t.val, 0, 0);
		Simbolo simbolo = new Simbolo(t.val, 0, 0);	// borrarcuando corrigas
		
		Expect(23);
		type = Expresion();
		if (type != bool) {SemErr("La condicion de un if debe ser logica");} 
		if (la.kind == 29) {
			Get();
			Cuerpo();
			Expect(36);
		} else if (StartOf(9)) {
			if (StartOf(4)) {
				Instruccion();
			} else {
				type = Ttipo();
				Expect(1);
				if (la.kind == 31) {
					Subprograma(simbolo);
				} else if (la.kind == 30 || la.kind == 41 || la.kind == 42) {
					if (la.kind == 30) {
						Vector(simbolo);
					}
					type = DecVar(sim);
					if (la.kind == 41) {
						Get();
						if (la.kind == 1) {
							Get();
						} else if (la.kind == 2) {
							Get();
						} else if (la.kind == 3) {
							Get();
						} else SynErr(70);
					}
				} else SynErr(71);
			}
		} else SynErr(72);
		if (la.kind == 24) {
			Else();
		}
	}

	int  Expresion() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1;
		
		type = Expresion2();
		type1 = Expresion1();
		if (type==type1) {
		tipoDev=type;
		} else if (type1==undef) {
			tipoDev=type;
		} else {
			SemErr("Error en Expresion");
		}
		
		return tipoDev;
	}

	void Else() {
		int type;
		Simbolo sim = new Simbolo(t.val, 0, 0);	// borrarcuando corrigas
		
		Expect(24);
		if (la.kind == 29) {
			Get();
			Cuerpo();
			Expect(36);
		} else if (StartOf(9)) {
			if (StartOf(4)) {
				Instruccion();
			} else {
				type = Ttipo();
				Expect(1);
				if (la.kind == 31) {
					Subprograma(sim);
				} else if (la.kind == 30 || la.kind == 41 || la.kind == 42) {
					if (la.kind == 30) {
						Vector(sim);
					}
					type = DecVar(sim);
					if (la.kind == 41) {
						Get();
						if (la.kind == 1) {
							Get();
						} else if (la.kind == 2) {
							Get();
						} else if (la.kind == 3) {
							Get();
						} else SynErr(73);
					}
				} else SynErr(74);
			}
		} else SynErr(75);
	}

	int  Arg_io() {
		int  tipoDev;
		tipoDev=undef;
		Simbolo sim; 
		if (la.kind == 1) {
			sim = new Simbolo("Temp", 0, 0); 
			Get();
			if (la.kind == 30) {
				Vector(sim);
			}
		} else if (la.kind == 3) {
			Get();
			tipoDev = cadena; 
		} else if (la.kind == 21 || la.kind == 42) {
		} else SynErr(76);
		return tipoDev;
	}

	int  Expresion2() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1;
		
		type = Expresion3();
		type1 = Expresion21();
		if (type1==undef) {	// no hay segunda parte expr
		tipoDev=type;
		} else if (type1==entera) {	// Expresion con op_relacional
			if (type==type1) {
				tipoDev=entera;		// op_relacional ok!
			} else {
				SemErr("OpRelacional: Error argumentos.");
			}
		} else if (type1==bool) {	// Expresion con op_logico
			if (type==type1) {
				tipoDev=bool;	// op_logico ok!
			} else {
				SemErr("OpLogica: Error argumentos");
			}
		} else {
			SemErr("Operacion Expr2 problems"+type+" "+type1);
		}
		
		return tipoDev;
	}

	int  Expresion1() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1, type2; 
		
		if (la.kind == 44) {
			Get();
			type = Expresion();
			Expect(26);
			type1 = Expresion();
			type2 = Expresion1();
		}
		return tipoDev;
	}

	int  Expresion3() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1;
		
		type = Expresion4();
		type1 = Expresion31();
		if (type1==undef) {
		tipoDev=type;
		} else if ((type==type1) && (type1==entera)) {
			tipoDev=type;
		} else {
			SemErr("Operacion Arit sobre tipos no enteros");
		}
		 
		return tipoDev;
	}

	int  Expresion21() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1;
		
		if (StartOf(10)) {
			if (la.kind == 46 || la.kind == 53 || la.kind == 54) {
				Operador_Logico();
				type = Expresion3();
				type1 = Expresion21();
				if (type==bool) {
				if (type1==undef) {	// todo ok!
					tipoDev=type;
				} else if (type1==bool) {	//2Âº ok!
					tipoDev=type;
				} else {				// 2Âº arg problem
					SemErr("OpLogica: Error argumentos.");
				}
				} else {	// error en 1Âº arg
					tipoDev=type;	// lo envio para q salte el error
					SemErr("OpLogica: Error argumentos.");
				}
				
			}
		} else if (StartOf(11)) {
			if (StartOf(12)) {
				Operador_Relacional();
				type = Expresion3();
				type1 = Expresion21();
				if (type==entera) {
				if (type1==undef) {	// todo ok!
					tipoDev=type;
				} else if (type1==entera) {	//2Âº ok!
					tipoDev=type;
				} else {				// 2Âº arg problem
					SemErr("OpRelacional: Error argumentos");
				}
				} else {	// error en 1Âº arg
					tipoDev=type;	// lo envio para q salte el error
												 							SemErr("OpRelacional: Error argumentos");
				}
				
			}
		} else SynErr(77);
		return tipoDev;
	}

	void Operador_Logico() {
		if (la.kind == 54) {
			Get();
		} else if (la.kind == 53) {
			Get();
		} else if (la.kind == 46) {
			Get();
		} else SynErr(78);
	}

	void Operador_Relacional() {
		switch (la.kind) {
		case 47: {
			Get();
			break;
		}
		case 48: {
			Get();
			break;
		}
		case 49: {
			Get();
			break;
		}
		case 50: {
			Get();
			break;
		}
		case 51: {
			Get();
			break;
		}
		case 52: {
			Get();
			break;
		}
		default: SynErr(79); break;
		}
	}

	int  ExpProducto() {
		int  total;
		total=undef;
		int valor=0, valor1=0, valor2=1;
		System.out.println("Estas en expProducto");
		
		valor = ExpCambioSigno();
		total=valor; 
		if (la.kind == 39 || la.kind == 40) {
			while (la.kind == 39 || la.kind == 40) {
				if (la.kind == 39) {
					Get();
					valor1 = ExpCambioSigno();
					total=total * valor1; 
				} else {
					Get();
					valor2 = ExpCambioSigno();
					total=total / valor2; 
				}
			}
		}
		System.out.println("Valor de la primera parte"+total); 
		return total;
	}

	int  ExpCambioSigno() {
		int  valor;
		int valor1=0;
		valor=1;
		System.out.println("Entraste en camb Signo");
		
		if (la.kind == 32 || la.kind == 33) {
			if (la.kind == 32) {
				Get();
				valor=-valor;/*cambio signo*/ 
			} else {
				Get();
			}
			valor1 = ExpCambioSigno();
			valor = valor * valor1;
			System.out.println("Negacion!:"+valor+" negado de "+valor1);
			
		} else if (la.kind == 2) {
			Get();
			valor = Integer.parseInt(t.val);
			System.out.println("Argumento entero:"+valor);
			
		} else SynErr(80);
		return valor;
	}

	int  Expresion4() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1, type2;
		
		if (la.kind == 46) {
			Get();
			type = Expresion4();
			if (type==bool) {
			tipoDev=type;
			} else {
				SemErr("OpNegLogico: Error argumento.");
			}
			
		} else if (la.kind == 32) {
			Get();
			type1 = Expresion4();
			if (type1==entera) {
			tipoDev=type1;
			} else {
				SemErr("OpNegAritmetico: Error argumento.");
			}
			
		} else if (StartOf(13)) {
			type2 = Expresion5();
			tipoDev=type2; 
		} else SynErr(81);
		return tipoDev;
	}

	int  Expresion31() {
		int  tipoDev;
		tipoDev=undef;
		int type, type1;
		
		if (StartOf(14)) {
			Operador_Aritmetico();
			type = Expresion4();
			type1 = Expresion31();
			if (type1==undef) {	// No hay 2Âº parte
			if (type==entera) {	// todo ok!
				tipoDev=type;
			} else {			// NO es un tipo ENTERO
				SemErr("Operacion Arit con arg no entero");
			}
			} else {	// hay otro expresion
				if ((type==type1) && (type==entera)) {	// las dos son
					tipoDev=type;
				} else {
					SemErr("Operacion Arit sobre tipos no enteros");
				}
			}
			 
		}
		return tipoDev;
	}

	void Operador_Aritmetico() {
		if (la.kind == 34) {
			Get();
		} else if (la.kind == 32) {
			Get();
		} else if (la.kind == 39) {
			Get();
		} else if (la.kind == 40) {
			Get();
		} else SynErr(82);
	}

	int  Expresion5() {
		int  tipoDev;
		tipoDev=undef;
		int type1, type;
		
		switch (la.kind) {
		case 31: {
			Get();
			type1 = Expresion();
			Expect(38);
			tipoDev=type1; 
			break;
		}
		case 10: {
			Get();
			Expect(1);
			Expect(31);
			Argumentos();
			Expect(38);
			break;
		}
		case 1: {
			Get();
			if (la.kind == 28 || la.kind == 30 || la.kind == 31) {
				if (la.kind == 28) {
					Get();
					Expect(1);
					if (la.kind == 31) {
						Get();
						Argumentos();
						Expect(38);
					}
				} else if (la.kind == 31) {
					Get();
					Argumentos();
					Expect(38);
				} else {
					Get();
					type = Expresion();
					Expect(37);
					tipoDev=type;
				}
			}
			break;
		}
		case 2: {
			Get();
			tipoDev=entera;	
			break;
		}
		case 3: {
			Get();
			tipoDev=cadena;	
			break;
		}
		case 13: {
			Get();
			tipoDev=bool;	
			break;
		}
		case 8: {
			Get();
			tipoDev=bool;	
			break;
		}
		default: SynErr(83); break;
		}
		return tipoDev;
	}

	void Expresion_Entera() {
		if (la.kind == 1 || la.kind == 2) {
			if (la.kind == 2) {
				Get();
			} else {
				Get();
			}
			if (StartOf(14)) {
				Operador_Aritmetico();
				Expresion_Entera();
			}
		} else if (la.kind == 31) {
			Get();
			Expresion_Entera();
			Expect(38);
			if (StartOf(14)) {
				Operador_Aritmetico();
				Expresion_Entera();
			}
		} else SynErr(84);
	}
